--- a/stm32f411_blink/Makefile
+++ b/stm32f411_blink/Makefile
@@ -9,10 +9,14 @@ DEFS = -DSTM32F411xE
 CFLAGS = $(MCU) -O0 -g -Wall $(DEFS) -ffreestanding -nostdlib
 
 # Include paths
-INCLUDES = \
-  -I/home/vboxuser/STM32CubeF4/Drivers/CMSIS/Include \
-  -I/home/vboxuser/cmsis_device_f4/Include \
-  -I/home/vboxuser/STM32CubeF4/Drivers/STM32F4xx_HAL_Driver/Inc
+INCLUDES = -I /home/rajdeep/bin/gcc-arm-none-eabi-10.3-2021.10/arm-none-eabi/include   \
+	   -I /home/rajdeep/misc/src/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Include     \
+	   -I /home/rajdeep/misc/src/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include
+
+#INCLUDES = \
+#  -I/home/vboxuser/STM32CubeF4/Drivers/CMSIS/Include \
+#  -I/home/vboxuser/cmsis_device_f4/Include \
+#  -I/home/vboxuser/STM32CubeF4/Drivers/STM32F4xx_HAL_Driver/Inc
 
 # Files
 SRC = main.c startup_stm32f411xx.s
@@ -21,7 +25,8 @@ OBJ := $(OBJ:.s=.o)
 
 TARGET = blink.elf
 BIN = blink.bin
-LINKER = stm32f411xe.ld
+# LINKER = stm32f411xe.ld
+LINKER = STM32F411RETX_FLASH.ld
 
 # ==== Build rules ====
 
